logs/pyaverager.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyAverager-0.9.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyaverager'...
Compiling './lib/python3.5/site-packages/pyaverager/PreProc.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PreProc.py, line 42)
Compiling './lib/python3.5/site-packages/pyaverager/PyAverager.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (PyAverager.py, line 100)
Compiling './lib/python3.5/site-packages/pyaverager/average_types.py'...
***   File "./lib/python3.5/site-packages/pyaverager/average_types.py", line 167
    print 'ERROR: ', ave, 'is not in the list of know averages. Exiting.'
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyaverager/climAverager.py'...
***   File "./lib/python3.5/site-packages/pyaverager/climAverager.py", line 152
    print var,var_Ave
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyaverager/climFileIO.py'...
***   File "./lib/python3.5/site-packages/pyaverager/climFileIO.py", line 60
    print 'Opening: ',mess, i_fn
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyaverager/regionOpts.py'...
***   File "./lib/python3.5/site-packages/pyaverager/regionOpts.py", line 45
    print 'Removing older version of:',outfile
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
